Add test data file. Install python with apt in container.

--- a/install-test/Dockerfile
+++ b/install-test/Dockerfile
@@ -1,5 +1,8 @@
 FROM rocker/tidyverse
 
+# Install python directly. Building through R is too slow for testing.
+RUN apt install python3-venv python3-pip python3-dev
+
 # Copy files.
 COPY install.R /usr/local/src/install_test/install.R
 
