--- a/install-test/Dockerfile
+++ b/install-test/Dockerfile
@@ -1,12 +1,11 @@
 FROM rocker/tidyverse
 
 # Install python directly. Building through R is too slow for testing.
-RUN apt install python3-venv python3-pip python3-dev
+RUN apt-get update && apt-get install -y python3-venv python3-pip python3-dev
 
 # Copy files.
 COPY install.R /usr/local/src/install_test/install.R
 
 # Run the installation tests.
 WORKDIR /usr/local/src/install_test
-# CMD ["Rscript", "install.R"]
-
+CMD ["Rscript", "install.R"]
