--- a/ThinkingGrid/NAMESPACE
+++ b/ThinkingGrid/NAMESPACE
@@ -7,3 +7,5 @@ export(install_thinkgrid)
 export(plot_tg)
 export(read_qualtrics_data)
 export(test_func)
+export(thinkgrid_quadrant_background)
+export(thinkgrid_quadrant_plot)
