--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -6,16 +6,17 @@ Authors@R:
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 Imports:
+    ggplot2,
+    gifski,
+    RColorBrewer,
     reticulate (>= 1.40.0)
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Suggests: 
-    ggplot2,
-    gifski,
-    RColorBrewer,
+Suggests:
+    png,
     testthat (>= 3.0.0),
     vdiffr
 Config/testthat/edition: 3
