--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -8,6 +8,8 @@ Description: What the package does (one paragraph).
 Imports:
     ggplot2,
     gifski,
+    grid,
+    gridExtra,
     RColorBrewer,
     reticulate (>= 1.40.0)
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
@@ -18,5 +20,6 @@ RoxygenNote: 7.3.2
 Suggests:
     png,
     testthat (>= 3.0.0),
-    vdiffr
+    vdiffr,
+    lme4
 Config/testthat/edition: 3
