--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -13,9 +13,9 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
+    colorspace,
     ggplot2,
     gifski,
-    RColorBrewer,
     testthat (>= 3.0.0),
     vdiffr
 Config/testthat/edition: 3
