r cmd check fixes

--- a/ThinkingGrid/NAMESPACE
+++ b/ThinkingGrid/NAMESPACE
@@ -11,3 +11,6 @@ export(read_qualtrics_data)
 export(test_func)
 export(thinkgrid_quadrant_background)
 export(thinkgrid_quadrant_plot)
+importFrom(methods,is)
+importFrom(stats,setNames)
+importFrom(utils,install.packages)
