--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -2,25 +2,25 @@ Package: ThinkingGrid
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Vishal", "Kuvar", , "kuvar001@umn.edu", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-6799-9790"))
+Description: A description here.
 Imports:
     ggplot2,
     gifski,
     grid,
     gridExtra,
-    RColorBrewer,
-    reticulate (>= 1.40.0)
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    methods,
+    reticulate (>= 1.40.0),
+    scales,
+    stats,
+    utils
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
     colorspace,
-    ggplot2,
-    gifski,
     png,
     testthat (>= 3.0.0),
     vdiffr,
