--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -6,6 +6,7 @@ Authors@R:
            comment = c(ORCID = "0000-0002-6799-9790"))
 Description: A description here.
 Imports:
+    cowplot,
     ggplot2,
     gifski,
     grid,
