--- a/ThinkingGrid/NAMESPACE
+++ b/ThinkingGrid/NAMESPACE
@@ -11,3 +11,5 @@ export(plot_tg)
 export(read_qualtrics_data)
 export(thinkgrid_quadrant_plot)
 importFrom(methods,is)
+importFrom(stats,setNames)
+importFrom(utils,install.packages)
