--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *~
 *.csv
+!ThinkingGrid/inst/extdata/*.csv
 *.gif
 *__pycache__/
 /invoice/*
@@ -14,3 +15,4 @@ __pycache__/
 .vscode/
 qsf_output_files/
 install-test/github-token
+.Rproj.user
