--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -31,6 +31,7 @@ Suggests:
     vdiffr,
     lme4,
     knitr,
-    rmarkdown
+    rmarkdown,
+    sjPlot
 Config/testthat/edition: 3
 VignetteBuilder: knitr
