--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ThinkingGrid
-Title: Tools for Thinking Grid Style Statistics.
+Title: Tools for Thinking Grid Style Statistics
 Version: 0.0.0.9000
 Authors@R:
     c(
@@ -8,8 +8,15 @@ Authors@R:
              comment = c(ORCID = "0000-0002-6799-9790")),
       person( "Zac", "Irving", , "zci7c@virginia.edu", role = c("ctb", "fnd"))
     )
-Description: A package providing utility functions for analyzing experiments using the Thinking Grid framework.
+Description: Provides comprehensive tools for conducting research using the Thinking Grid 
+    framework, a psychological measurement approach for understanding deliberate and 
+    automatic cognitive constraints. Includes functions for generating Qualtrics 
+    surveys, processing survey responses, calculating quadrant depths, and creating 
+    various visualization types including heatmaps, animations, and statistical plots.
+URL: https://github.com/a-kulkarn/qualtrics-thinkgrid
+BugReports: https://github.com/a-kulkarn/qualtrics-thinkgrid/issues
 Imports:
+    colorspace,
     cowplot,
     ggplot2,
     gifski,
@@ -25,7 +32,6 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
-    colorspace,
     png,
     testthat (>= 3.0.0),
     vdiffr,
