--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -13,7 +13,7 @@ Description: Provides comprehensive tools for conducting research using the Thin
     automatic cognitive constraints. Includes functions for generating Qualtrics 
     surveys, processing survey responses, calculating quadrant depths, and creating 
     various visualization types including heatmaps, animations, and statistical plots.
-URL: https://github.com/a-kulkarn/qualtrics-thinkgrid
+URL: https://a-kulkarn.github.io/qualtrics-thinkgrid/
 BugReports: https://github.com/a-kulkarn/qualtrics-thinkgrid/issues
 Imports:
     colorspace,
