--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -15,6 +15,9 @@ permissions: read-all
 jobs:
   pkgdown:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ThinkingGrid
     # Only restrict concurrency for non-PR jobs
     concurrency:
       group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
