--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -52,6 +52,10 @@ jobs:
           extra-packages: any::pkgdown, local::.
           needs: website
 
+      - name: Setup ThinkingGrid
+        run: ThinkingGrid::install_thinkgrid()
+        shell: Rscript {0}
+        
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
