--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -66,4 +66,4 @@ jobs:
         with:
           clean: false
           branch: gh-pages
-          folder: docs
+          folder: ThinkingGrid/docs
