Updates according to CRAN checklists.

--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ThinkingGrid
-Title: Tools for Thinking Grid Style Statistics
+Title: Tools for Thinking Grid Statistics
 Version: 0.0.0.9000
-Author: Avinash Kulkarni [aut], Vishal Kuvar [aut, cre], Zac Irving [ctb, fnd]
+Author: Avinash Kulkarni [aut, cph], Vishal Kuvar [aut, cre], Zac Irving [ctb, fnd]
 Maintainer: Vishal Kuvar <kuvar001@umn.edu>
 Authors@R:
     c(
-      person("Avinash", "Kulkarni", , "avi.kulkarni.2.71@gmail.com", role = c("aut")),
+      person("Avinash", "Kulkarni", , "avi.kulkarni.2.71@gmail.com", role = c("aut", "cph")),
       person("Vishal", "Kuvar", , "kuvar001@umn.edu", role = c("aut", "cre"),
              comment = c(ORCID = "0000-0002-6799-9790")),
       person( "Zac", "Irving", , "zci7c@virginia.edu", role = c("ctb", "fnd"))
