--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ThinkingGrid
 Title: Tools for Thinking Grid Statistics
-Version: 0.0.0.9000
+Version: 0.1.0
 Author: Avinash Kulkarni [aut, cph], Vishal Kuvar [aut, cre], Zac Irving [ctb, fnd]
 Maintainer: Vishal Kuvar <kuvar001@umn.edu>
 Authors@R:
@@ -10,10 +10,10 @@ Authors@R:
              comment = c(ORCID = "0000-0002-6799-9790")),
       person( "Zac", "Irving", , "zci7c@virginia.edu", role = c("ctb", "fnd"))
     )
-Description: Provides comprehensive tools for conducting research using the Thinking Grid 
-    framework, a psychological measurement approach for understanding deliberate and 
-    automatic cognitive constraints. Includes functions for generating Qualtrics 
-    surveys, processing survey responses, calculating quadrant depths, and creating 
+Description: Provides comprehensive tools for conducting research using the Thinking Grid
+    framework, a psychological measurement approach for understanding deliberate and
+    automatic cognitive constraints. Includes functions for generating 'Qualtrics'
+    surveys, processing survey responses, calculating quadrant depths, and creating
     various visualization types including heatmaps, animations, and statistical plots.
 URL: https://a-kulkarn.github.io/qualtrics-thinkgrid/
 BugReports: https://github.com/a-kulkarn/qualtrics-thinkgrid/issues
