--- a/ThinkingGrid/DESCRIPTION
+++ b/ThinkingGrid/DESCRIPTION
@@ -3,8 +3,8 @@ Title: Tools for Thinking Grid Statistics
 Version: 0.1.0
 Authors@R:
     c(
-      person("Avinash", "Kulkarni", , "avi.kulkarni.2.71@gmail.com", role = c("aut", "cph")),
-      person("Vishal", "Kuvar", , "kuvar001@umn.edu", role = c("aut", "cre"),
+      person("Avinash", "Kulkarni", , "avi.kulkarni.2.71@gmail.com", role = c("aut", "cre", "cph")),
+      person("Vishal", "Kuvar", , "kuvar001@umn.edu", role = c("aut"),
              comment = c(ORCID = "0000-0002-6799-9790")),
       person( "Zac", "Irving", , "zci7c@virginia.edu", role = c("ctb", "fnd"))
     )
