--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ ThinkingGrid/..Rcheck/
 ThinkingGrid/ThinkingGrid.Rcheck/
 ThinkingGrid/ThinkingGrid_0.0.0.9000.tar.gz
 ThinkingGrid/inst/test_data/remove_hashes.py
+ThinkingGrid.Rcheck/
+ThinkingGrid_0.1.0.tar.gz
