--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -44,6 +44,7 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           brew install python3
+          brew install --cask xquartz
 
       - name: Install system dependencies (Windows)
         if: runner.os == 'Windows'
